[workspace]
resolver = "3"
members = ["nyat","nyat-core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["uchouT <i@uchout.moe>"]
repository = "https://github.com/uchouT/nyat"
keywords = ["stun", "traversal", "tcp", "udp", "port-mapping", "nat1"]
categories = ["network-programming"]

[workspace.dependencies]
nyat-core = { path = "nyat-core", version = "0.1.0" }
libc = "0.2"
thiserror = "2"
socket2 = { version = "0.6.2", features = ["all"] }
tokio = "1"
clap = "4.5.58"
toml = "1"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
strip = true
lto = "thin"
panic = "abort"
codegen-units = 1
