[workspace]
resolver = "3"
members = ["nyat", "nyat-core"]

[workspace.package]
version = "0.1.0"
authors = ["uchouT <i@uchout.moe>"]
edition = "2024"
repository = "https://github.com/uchouT/nyat"
license = "MIT"
keywords = ["nat1", "port-mapping", "stun", "traversal"]
categories = ["network-programming"]

[workspace.dependencies]
anyhow = "1"
clap = "4"
libc = "0.2"
nyat-core = { path = "nyat-core", version = "0.1.0" }
socket2 = { version = "0.6.2", features = ["all"] }
thiserror = "2"
tokio = "1"
toml = "1"

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
