[package]
name = "nyat-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NAT traversal library — discover and maintain public addresses via STUN."
readme = "README.md"

[dependencies]
error_set = { workspace = true }
smallvec = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "time", "io-util"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
