[package]
name = "nyat-core"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "NAT traversal library — discover and maintain public addresses via STUN."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "time", "io-util"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[features]
default = ["tcp", "udp"]
reuse_port = []
udp = []
tcp = []
