[package]
name = "nyat-core"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
description = "NAT traversal library — discover and maintain public addresses via STUN."
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
socket2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "time"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[features]
default = ["tcp", "udp"]
reuse_port = []
tcp = []
udp = []
