[package]
name = "nyat"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nyat-core = { workspace = true, features = [] }
tokio = { workspace = true, features = ["macros", "rt","rt-multi-thread"] }
