[package]
name = "nyat"
description = "NAT traversal port mapper"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
nyat-core = { workspace = true, features = ["reuse_port", "tcp", "udp"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
