[package]
name = "nyat"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "NAT traversal port mapper"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
nyat-core = { workspace = true, features = ["reuse_port", "tcp", "udp"] }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
toml = { workspace = true }
